--- a/Andoku/AndroidManifest.xml
+++ b/Andoku/AndroidManifest.xml
@@ -22,7 +22,7 @@
       android:versionCode="4"
       android:versionName="1.0.3">
 
-    <uses-sdk android:minSdkVersion="4"></uses-sdk>
+    <uses-sdk android:minSdkVersion="3" android:maxSdkVersion="4"/>
 
     <uses-permission android:name="android.permission.VIBRATE" />
     <uses-permission android:name="android.permission.WAKE_LOCK" />
