--- a/Andoku/AndroidManifest.xml
+++ b/Andoku/AndroidManifest.xml
@@ -29,7 +29,7 @@
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
     <application android:icon="@drawable/icon" android:label="@string/app_name">
-        <activity android:name=".Main"
+        <activity android:name=".MainActivity"
                   android:label="@string/app_name"
                   android:theme="@style/Theme.NoBackground.Light">
             <intent-filter>
@@ -38,7 +38,7 @@
             </intent-filter>
         </activity>
 
-        <activity android:name=".Andoku"
+        <activity android:name=".AndokuActivity"
                   android:label="@string/app_name"
                   android:theme="@style/Theme.NoBackground.Light">
         </activity>
