--- a/Andoku/AndroidManifest.xml
+++ b/Andoku/AndroidManifest.xml
@@ -42,6 +42,11 @@
                   android:label="@string/app_name"
                   android:theme="@style/Theme.NoBackground.Light">
         </activity>
+
+        <activity android:name=".DisplayErrorActivity"
+                  android:label="@string/app_name"
+                  android:theme="@style/Theme.NoBackground.Light">
+        </activity>
     </application>
 
 </manifest> 
