--- a/Andoku/AndroidManifest.xml
+++ b/Andoku/AndroidManifest.xml
@@ -43,6 +43,11 @@
                   android:theme="@style/Theme.NoBackground.Light">
         </activity>
 
+        <activity android:name=".FolderListActivity"
+                  android:label="@string/app_name"
+                  android:theme="@style/Theme.NoBackground.Light">
+        </activity>
+
         <activity android:name=".DisplayErrorActivity"
                   android:label="@string/app_name"
                   android:theme="@style/Theme.NoBackground.Light">
