--- a/Andoku/AndroidManifest.xml
+++ b/Andoku/AndroidManifest.xml
@@ -41,6 +41,9 @@
         <activity android:name=".AndokuActivity"
                   android:label="@string/app_name"
                   android:theme="@style/Theme.NoBackground.Light">
+            <intent-filter>
+                <action android:name="android.intent.action.VIEW"/>
+            </intent-filter>
         </activity>
 
         <activity android:name=".FolderListActivity"
@@ -51,6 +54,17 @@
         <activity android:name=".DisplayErrorActivity"
                   android:label="@string/app_name"
                   android:theme="@style/Theme.NoBackground.Light">
+        </activity>
+
+        <activity android:name=".ImportActivity"
+                  android:label="@string/app_name"
+                  android:theme="@style/Theme.Dialog.NoAnim">
+            <intent-filter>
+                <action android:name="com.googlecode.andoku.IMPORT"/>
+                <category android:name="android.intent.category.DEFAULT"/>
+                <category android:name="android.intent.category.EMBED"/>
+                <data android:scheme="andoku"/>
+            </intent-filter>
         </activity>
     </application>
 
