--- a/Andoku/AndroidManifest.xml
+++ b/Andoku/AndroidManifest.xml
@@ -24,9 +24,9 @@
 
     <uses-sdk android:minSdkVersion="3" android:targetSdkVersion="4"/>
 
-    <uses-permission android:name="android.permission.VIBRATE" />
-    <uses-permission android:name="android.permission.WAKE_LOCK" />
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.VIBRATE"/>
+    <uses-permission android:name="android.permission.WAKE_LOCK"/>
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
 
     <permission android:name="com.googlecode.andoku.permission.IMPORT"
         android:label="@string/perm_label_import"
@@ -41,32 +41,33 @@
 
         <activity android:name=".MainActivity"
                   android:label="@string/app_name"
+                  android:screenOrientation="portrait"
                   android:theme="@style/Theme.NoBackground.Light">
             <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-                <category android:name="android.intent.category.LAUNCHER" />
+                <action android:name="android.intent.action.MAIN"/>
+                <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
 
         <activity android:name=".AndokuActivity"
                   android:label="@string/app_name"
-                  android:theme="@style/Theme.NoBackground.Light">
-        </activity>
+                  android:screenOrientation="portrait"
+                  android:theme="@style/Theme.NoBackground.Light"/>
 
         <activity android:name=".FolderListActivity"
                   android:label="@string/app_name"
-                  android:theme="@style/Theme.NoBackground.Light">
-        </activity>
+                  android:screenOrientation="portrait"
+                  android:theme="@style/Theme.NoBackground.Light"/>
 
         <activity android:name=".SettingsActivity"
                   android:label="@string/app_name"
-                  android:theme="@style/Theme.NoBackground.Light">
-        </activity>
+                  android:screenOrientation="portrait"
+                  android:theme="@style/Theme.NoBackground.Light"/>
 
         <activity android:name=".DisplayErrorActivity"
                   android:label="@string/app_name"
-                  android:theme="@style/Theme.NoBackground.Light">
-        </activity>
+                  android:screenOrientation="portrait"
+                  android:theme="@style/Theme.NoBackground.Light"/>
     </application>
 
 </manifest> 
