--- a/Andoku/AndroidManifest.xml
+++ b/Andoku/AndroidManifest.xml
@@ -49,6 +49,11 @@
             </intent-filter>
         </activity>
 
+        <activity android:name=".ResumeGameActivity"
+                  android:label="@string/app_name"
+                  android:screenOrientation="portrait"
+                  android:theme="@style/Theme.NoBackground.Light"/>
+
         <activity android:name=".AndokuActivity"
                   android:label="@string/app_name"
                   android:screenOrientation="portrait"
