--- a/Andoku/AndroidManifest.xml
+++ b/Andoku/AndroidManifest.xml
@@ -49,17 +49,12 @@
             </intent-filter>
         </activity>
 
-        <activity android:name=".NewGameActivity"
-                  android:label="@string/app_name"
-                  android:screenOrientation="portrait"
-                  android:theme="@style/Theme.NoBackground.Light"/>
-
         <activity android:name=".ResumeGameActivity"
                   android:label="@string/app_name"
                   android:screenOrientation="portrait"
                   android:theme="@style/Theme.NoBackground.Light"/>
 
-        <activity android:name=".AndokuActivity"
+        <activity android:name=".NewGameActivity"
                   android:label="@string/app_name"
                   android:screenOrientation="portrait"
                   android:theme="@style/Theme.NoBackground.Light"/>
@@ -70,6 +65,16 @@
                   android:theme="@style/Theme.NoBackground.Light"/>
 
         <activity android:name=".SettingsActivity"
+                  android:label="@string/app_name"
+                  android:screenOrientation="portrait"
+                  android:theme="@style/Theme.NoBackground.Light"/>
+
+        <activity android:name=".HelpActivity"
+                  android:label="@string/app_name"
+                  android:screenOrientation="portrait"
+                  android:theme="@style/Theme.NoBackground.Light"/>
+
+        <activity android:name=".AndokuActivity"
                   android:label="@string/app_name"
                   android:screenOrientation="portrait"
                   android:theme="@style/Theme.NoBackground.Light"/>
