--- a/Andoku/AndroidManifest.xml
+++ b/Andoku/AndroidManifest.xml
@@ -74,6 +74,11 @@
                   android:screenOrientation="portrait"
                   android:theme="@style/Theme.NoBackground.Light"/>
 
+        <activity android:name=".AboutActivity"
+                  android:label="@string/app_name"
+                  android:screenOrientation="portrait"
+                  android:theme="@style/Theme.NoBackground.Light"/>
+
         <activity android:name=".AndokuActivity"
                   android:label="@string/app_name"
                   android:screenOrientation="portrait"
