--- a/Andoku/AndroidManifest.xml
+++ b/Andoku/AndroidManifest.xml
@@ -61,6 +61,16 @@
             </intent-filter>
         </activity>
 
+        <activity android:name=".OpenImportedPuzzleActivity"
+                  android:label="@string/app_name"
+                  android:screenOrientation="portrait"
+                  android:theme="@style/Theme.NoBackground.Light">
+            <intent-filter>
+                <action android:name="android.intent.action.VIEW"/>
+                <category android:name="android.intent.category.DEFAULT"/>
+            </intent-filter>
+        </activity>
+
         <activity android:name=".ResumeGameActivity"
                   android:label="@string/app_name"
                   android:screenOrientation="portrait"
