Reintroduced class Main to make old desktop icons work again.
git-svn-id: http://andoku.googlecode.com/svn/trunk@242 8b5035ae-46ba-11de-80ae-c1ff141340a0

--- a/Andoku/AndroidManifest.xml
+++ b/Andoku/AndroidManifest.xml
@@ -44,6 +44,15 @@
                   android:authorities="com.googlecode.andoku.puzzlesprovider"
                   android:writePermission="com.googlecode.andoku.permission.IMPORT"/>
 
+        <activity android:name=".Main"
+                  android:label="@string/app_name"
+                  android:screenOrientation="portrait"
+                  android:theme="@style/Theme.NoBackground.Light">
+            <intent-filter>
+                <action android:name="android.intent.action.VIEW"/>
+            </intent-filter>
+        </activity>
+
         <activity android:name=".MainActivity"
                   android:label="@string/app_name"
                   android:screenOrientation="portrait"
