--- a/Andoku/AndroidManifest.xml
+++ b/Andoku/AndroidManifest.xml
@@ -21,6 +21,7 @@
 
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
       package="com.googlecode.andoku"
+      android:installLocation="auto"
       android:versionCode="12"
       android:versionName="1.3.1">
 
