--- a/Andoku-Tests/AndroidManifest.xml
+++ b/Andoku-Tests/AndroidManifest.xml
@@ -28,7 +28,7 @@
         <uses-library android:name="android.test.runner" />
     </application>
 
-    <uses-sdk android:minSdkVersion="3" />
+    <uses-sdk android:minSdkVersion="3" android:targetSdkVersion="8"/>
 
     <instrumentation
         android:targetPackage="com.googlecode.andoku"
