--- a/Andoku-Web-Import/AndroidManifest.xml
+++ b/Andoku-Web-Import/AndroidManifest.xml
@@ -21,8 +21,7 @@
 
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
       package="com.googlecode.andoku.webimport"
-      android:versionCode="1"
-      android:versionName="1.0">
+      android:versionCode="1" android:versionName="1.3.3">
 
     <uses-sdk android:minSdkVersion="4" />
 
