--- a/Andoku/AndroidManifest.xml
+++ b/Andoku/AndroidManifest.xml
@@ -27,6 +27,9 @@
 
     <uses-sdk android:minSdkVersion="3" android:targetSdkVersion="8"/>
 
+	<uses-permission android:name="android.permission.INTERNET"/>
+  	<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
+  
     <uses-permission android:name="android.permission.VIBRATE"/>
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
 
@@ -109,6 +112,10 @@
                   android:label="@string/app_name"
                   android:screenOrientation="portrait"
                   android:theme="@style/Theme.NoBackground.Light"/>
+
+		<activity android:name="com.google.ads.AdActivity"
+              android:configChanges="keyboard|keyboardHidden|orientation"/>
+              
     </application>
 
 </manifest> 
